--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -23,3 +23,7 @@ img {
 		}
 	}
 }
+
+.arrow-svg {
+	filter: invert(15%) sepia(8%) saturate(4909%) hue-rotate(190deg) brightness(94%) contrast(97%);
+}
