--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -4,13 +4,16 @@
 	width: 100%;
 	h3 {
 		font-size: 2rem;
+		font-family: "Open Sans", sans-serif;
+		font-weight: 600;
+		color:#223742;
 	}
 	p {
 		margin-bottom: 30px;
 	}
-   a{
-      color: #d80a77;
-   }
+	a {
+		color: #d80a77;
+	}
 	img {
 		max-width: 100%;
 		width: 100%;
