Style navbar to have active indicator and minor styling

--- a/src/styles/Fonts.scss
+++ b/src/styles/Fonts.scss
@@ -7,7 +7,12 @@
 
 @font-face {
 	font-family: "Nautical";
-	src: url("../assets/texts/18935286.eps");
+	src: url("../assets/texts/VtksBoldandcool-2Vow.ttf");
+}
+
+@font-face {
+	font-family: "Wave";
+	src: url("../assets/texts/JlrWaves-B0O8.ttf");
 }
 
 .intro-text,
@@ -35,3 +40,4 @@
 		font-size: 5rem;
 	}
 }
+
