--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -7,7 +7,7 @@
 }
 
 .activeLink {
-	font-family: "Wave", "Roboto Slab", monospace;
+	font-family: "Roboto Slab", monospace;
 	text-align: center;
 	color: #1d8dcf;
 	position: relative;
