--- a/src/styles/Comment.scss
+++ b/src/styles/Comment.scss
@@ -13,7 +13,7 @@
 			animation: pop 0.3s ease-in-out forwards;
 		}
 	}
-	.reply {
+	.reply, .trash {
 		filter: invert(61%) sepia(8%) saturate(406%) hue-rotate(180deg) brightness(94%) contrast(91%);
 		&:hover {
 			filter: invert(8%) sepia(10%) saturate(3667%) hue-rotate(166deg) brightness(95%) contrast(93%);
