--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -11,6 +11,7 @@
 	text-align: center;
 	color: #1d8dcf;
 	position: relative;
+	text-shadow: 0px 0px 5px white, 0px 0px 5px white, 0px 0px 5px white, 0px 0px 5px white;
 
 	&::before,
 	&::after {
@@ -40,11 +41,22 @@ nav {
 	justify-content: center;
 	.logo-container {
 		display: none;
-		@media screen and (min-width: 470px) {
+		@media screen and (min-width: 520px) {
 			display: flex;
 		}
 	}
-	@media screen and (min-width: 470px) {
+	.link {
+		text-shadow: 0px 0px 3px white, 0px 0px 3px white, 0px 0px 3px white, 0px 0px 5px white;
+	}
+	@media screen and (min-width: 520px) {
 		justify-content: space-between;
+	}
+}
+
+// WAVE SVG: make bigger in height for smaller screens
+.page-wave {
+	viewbox: 0 130 1440 300; /* Adjust the height as needed */
+	@media (min-width: 600px) {
+		viewbox: 0 130 1440 200;
 	}
 }
