--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -2,7 +2,7 @@
 	margin: 30px auto;
 	max-width: 800px;
 	width: 100%;
-	h3 {
+	h1, h2, h3 {
 		font-size: 2rem;
 		font-family: "Open Sans", sans-serif;
 		font-weight: 600;
