Styling changes to home page and navbar wave

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -30,7 +30,7 @@
 	}
 	&::after {
 		border-width: 0 0 15px 20px; /* Triangle for sails */
-		border-color: transparent transparent #ec6e46 transparent;
+		border-color: transparent transparent #ee185b transparent;
 		top: -28px;
 		left: 50%;
 		transform: translate(-70%);
