Edit react lazy load issue to have fade effect

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -6,6 +6,15 @@
 	}
 }
 
+// .page_stripe {
+// 	background-image: linear-gradient(to right, #3764b2, #d80b77);
+// 	height: 8px;
+// 	margin-bottom: 5px;
+// 	@media screen and (min-width: 520px) {
+// 		margin-bottom: 0;
+// 	}
+// }
+
 .activeLink {
 	font-family: "Roboto Slab", monospace;
 	text-align: center;
